SFDC_LD_Packages/CPQ/main/default/objects/Contract_Playbook_Answer__c/Contract_Playbook_Answer__c.object-meta.xml
<CustomObject>
    <description>Houses responses/answers to a specific CPQ Playbook Question</description>
    <label>Contract Playbook Answer</label>
    <nameField>
        <label>Contract Playbook Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Playbook Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>