SFDC_LD_Packages/CPQ/main/default/objects/Contract_Playbook_Answer__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <description>Parent Contract record</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract Playbook Answers</relationshipLabel>
    <relationshipName>Contract_Playbook_Answers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>