SFDC_LD_Packages/CPQ/main/default/objects/Contract_Playbook_Answer__c/fields/Value_Boolean__c.field-meta.xml
<CustomField>
    <fullName>Value_Boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If related question answer type is &apos;Boolean&apos;, value for answer stored here</description>
    <label>Value (Boolean)</label>
    <type>Checkbox</type>
</CustomField>