SFDC_LD_Packages/CPQ/main/default/objects/Contract_Playbook_Answer__c/fields/Value_Currency__c.field-meta.xml
<CustomField>
    <fullName>Value_Currency__c</fullName>
    <description>If related question answer type is &apos;Currency&apos;, value for answer stored here</description>
    <label>Value (Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>