SFDC_LD_Packages/CPQ/main/default/objects/Contract_Playbook_Answer__c/fields/Value_Date__c.field-meta.xml
<CustomField>
    <fullName>Value_Date__c</fullName>
    <description>If related question answer type is &apos;Date&apos;, value for answer stored here</description>
    <label>Value (Date)</label>
    <type>Date</type>
</CustomField>