SFDC_LD_Packages/CPQ/main/default/objects/Contract_Playbook_Answer__c/fields/Value_Decimal__c.field-meta.xml
<CustomField>
    <fullName>Value_Decimal__c</fullName>
    <description>If related question answer type is &apos;Decimal&apos;, value for answer stored here</description>
    <label>Value (Decimal)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>