SFDC_LD_Packages/CPQ/main/default/objects/Contract_Playbook_Answer__c/fields/Value_Integer__c.field-meta.xml
<CustomField>
    <fullName>Value_Integer__c</fullName>
    <description>If related question answer type is &apos;Integer&apos;, value for answer stored here</description>
    <label>Value (Integer)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>